# hive

./: Cargo.toml  PLAN.md  README.md
crates/hive-core/: Cargo.toml
crates/hive-core/src/: agent.rs  config.rs  diff.rs  lib.rs  session.rs  worktree.rs
crates/hive-gui/: Cargo.toml
crates/hive-gui/src/: app.rs  chat_view.rs  command_palette.rs  diff_panel.rs  input_bar.rs  keybindings.rs  main.rs  message.rs  sidebar.rs  theme.rs  workspace.rs
