[package]
name = "hive-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git2.workspace = true
portable-pty.workspace = true
serde.workspace = true
strip-ansi-escapes.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
